add fundamental HomePageController, services, repositories